<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:id="@+id/main"
    tools:context=".MainActivity"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailEditText"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordEditText"
        android:hint="@string/password"
        android:minHeight="48dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/registerBtn"
        android:layout_marginTop="12dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginBtn"
        android:layout_marginTop="12dp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:id="@+id/forgotPasswordBtn"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:textColor="@color/red"
        android:backgroundTint="@color/grey"

        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/purple_code"
        android:scaleType="centerCrop"
        android:src="@drawable/purplecode"
        android:layout_margin="16dp"
        />


</LinearLayout>